# ai-orchestrator-v1

./: .env.example  .gitignore  README.md  debug_citations.py  diag.py  env.example  live_test_gemini.py  live_test_openai.py  live_test_parallel.py  live_test_perplexity.py  orchestrator_v1.db  pyproject.toml  requirements.txt  smoke_test_gemini.py  test.db
cursor_jobs/: run-207f32b7.md  run-717992fd.md  run-a4030431.md
docs/: STEP15_APP_DEV_PLAN.md  cursor_manual_execution.md  deploy_guide.md  failure_recovery.md  ops_checklist.md  phase_1_2_3_redesign.md  project_context.md  resume_flow.md  runbook.md  scope.md  scope_v4.md  setup.md  snapshot_v1.md  snapshot_v2.md  snapshot_v3.md  snapshot_v4.md  step_14_plan.md  step_14_refactor_plan.md  success_cases.md  token_optimization_strategy.md
scripts/: migrate_to_v4.py
src/: cli.py  graph_flow.py  orchestrator.py
tests/: smoke_test_gemini.py  test_3layer_review.py  test_api_connection.py  test_artifact_store.py  test_builder_service.py  test_classifier.py  test_day113_schema.py  test_day114_phase_0_5.py  test_day115_phase_1.py  test_day116_parallel_research.py  test_day117_phase_3.py  test_day118_phase_6.py  test_day119_phase_5.py  test_day120_phase_4.py  test_day121_phase_7.py  test_day122_web_v4.py  test_day123_llm_utils.py  test_day131_budget_guard.py  test_day132_call_llm_json.py  test_day133_model_pricing.py  test_day134_llm_calls_table.py  test_day135_budget_guard_db.py  test_day136_llm_logging.py  test_day137_research_v2_base.py  test_day138_perplexity_adapter.py  test_day139_openai_adapter.py  (+27 more)
(+87 files in other folders)
