[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-orchestrator-v1"
version = "0.1.0"
description = "Document-centric AI orchestration engine with backward action planning"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "langgraph>=0.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
orch = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
